--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:1.1.1"
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
+    // Rx
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.14'
+    implementation 'com.jakewharton.rxbinding2:rxbinding-design:2.1.1'
+
     // utils
     implementation 'com.jakewharton.timber:timber:4.7.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
@@ -45,6 +50,7 @@ dependencies {
     implementation 'org.parceler:parceler-api:1.1.10'
     annotationProcessor 'org.parceler:parceler:1.1.10'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.1.0'
 
     implementation 'com.prof.rssparser:rssparser:1.4.1'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
