--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,12 +36,12 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
-    implementation "com.android.support:support-annotations:28.0.0"
+    implementation 'com.android.support:support-annotations:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
 
     // ViewModel and LiveData
-    implementation "android.arch.lifecycle:extensions:1.1.1"
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    annotationProcessor 'android.arch.lifecycle:compiler:1.1.1'
 
     // Rx
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
@@ -49,22 +49,23 @@ dependencies {
     implementation 'com.jakewharton.rxbinding2:rxbinding-design:2.2.0'
 
     // utils
-    implementation 'com.jakewharton.timber:timber:4.7.0'
-    implementation 'com.jakewharton:butterknife:8.8.1'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'org.parceler:parceler-api:1.1.10'
-    annotationProcessor 'org.parceler:parceler:1.1.10'
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    implementation 'com.jakewharton:butterknife:9.0.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0'
+    implementation 'org.parceler:parceler-api:1.1.11'
+    annotationProcessor 'org.parceler:parceler:1.1.11'
     implementation 'com.squareup.picasso:picasso:2.71828'
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.1.0'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.4.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+    // Networking
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.5.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
 
-    implementation("com.mikepenz:materialdrawer:6.0.7@aar") {
+    implementation("com.mikepenz:materialdrawer:6.0.9@aar") {
         transitive = true
     }
-    implementation 'com.mikepenz:google-material-typeface:3.0.1.2.original@aar'
+    implementation 'com.mikepenz:google-material-typeface:3.0.1.3.original@aar'
     implementation 'com.mikepenz:community-material-typeface:2.0.46.1@aar'
 
     implementation 'com.prof.rssparser:rssparser:1.4.5'
