--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
 
     // ViewModel and LiveData
@@ -60,11 +61,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-moshi:2.7.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.4'
 
-    implementation("com.mikepenz:materialdrawer:6.0.9@aar") {
+    implementation("com.mikepenz:materialdrawer:6.1.2@aar") {
         transitive = true
     }
     implementation 'com.mikepenz:google-material-typeface:3.0.1.3.original@aar'
-    implementation 'com.mikepenz:community-material-typeface:2.0.46.1@aar'
+    implementation 'com.mikepenz:community-material-typeface:2.7.94.1@aar'
 
     implementation 'com.prof.rssparser:rssparser:1.4.5'
 }
